--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,4 +10,4 @@ and open the template in the editor.
 .user-taxonomies-page .form-table th { padding-left: 4px; width: 85px; }
 .howto { clear: left; }
 .float-left { float: left; }
-.tag-suggestion { clear: left; float: left; margin: 0; background: white; padding: 4px; border: 1px solid black;}
+.tag-suggestion { clear: left; cursor: pointer; float: left; margin: 0; background: white; padding: 4px; border: 1px solid black;}
