--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,8 @@ and open the template in the editor.
     Author     : Umesh Kumar <umeshsingla05@gmail.com>
 */
 .user-taxonomies-page .form-table th { padding-left: 4px; width: 85px; }
+td.ajaxtag { position: relative; }
 .howto { clear: left; }
 .float-left { float: left; }
-.tag-suggestion { clear: left; cursor: pointer; float: left; margin: 0; background: white; padding: 4px; border: 1px solid black;}
+.tag-suggestion { background: white; border: 1px solid black; clear: left; cursor: pointer; float: left; margin: 0;  padding: 4px; position: absolute; top: 44px; z-index: 10; }
+.term-link{ float: left; margin-right: 25px; line-height: 1.7; margin-left: 10px;}
