--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ a.ntdelbutton { font-size:14px; line-height: 16px; text-shadow: none; vertical-a
 #membership-wrapper .user-taxonomy-wrapper th {  color: inherit; font-weight: 100; padding: 0 20px 0 0; text-align: right; vertical-align: top; width: 150px; }
 #membership-wrapper .user-taxonomy-wrapper td { padding: 0; }
 ul.user-profile-taxonomy { margin-bottom: 10px; margin-left: 0; }
+ul.user-profile-taxonomy .tag-hldr span { margin: 0; }
 ul.user-profile-taxonomy label { display: inline-block; vertical-align: top; width: 100px; }
 ul.user-profile-taxonomy > li { overflow: hidden; list-style: none; margin: 20px 0; }
 ul.user-profile-taxonomy > li:last-child { margin-bottom: 0; }
