--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,14 +25,15 @@ td.ajaxtag { position: relative; }
 .ut-back-link { text-decoration: none; margin-right: 25px; float: right;}
 .user-taxonomy-wrapper th { background: none !important; border: 0 !important; }
 .user-taxonomy-wrapper td, .user-taxonomy-wrapper .odd td{ border: none !important; background:none !important; }
-.tag-hldr { background: #767676; display: inline-block; margin: 2px 3px; padding: 3px; }
+.tag-hldr { background: #14b694; display: inline-block; margin: 2px 3px; padding: 3px; }
+.tag-hldr:hover { background: #444; }
 .tag-hldr span { background: rgb(185, 185, 185); border-radius: 50%; display: inline-block; float:none; height: 16px; margin:4px 0 0 0; position:relative; vertical-align: middle; text-align:center; width: 16px; }
 .tag-hldr span:hover { background: rgb(180,0,0); cursor: pointer; }
-.tag-hldr a{ color: white;  text-shadow: 0 -1px 0 rgb(100,100,100); text-decoration:none; }
+.tag-hldr a{ color: white; text-decoration:none; }
 .tag-hldr a:hover { color: rgb(245,245,245); text-decoration:none; }
 a.ntdelbutton { font-size:14px; line-height: 16px; text-shadow: none; vertical-align: top; }
 .user-taxonomy-wrapper .tagchecklist span { line-height:inherit; }
-.user-taxonomy-wrapper .tagchecklist span a { height: inherit; line-height: 5px; margin: inherit; width: inherit; }
+.user-taxonomy-wrapper .tagchecklist span a { margin: -1px 0 0 5px; width: auto; } 
 .user-taxonomy-wrapper .tagchecklist span a:before { content: none; }
 #membership-wrapper .user-taxonomy-wrapper th {  color: inherit; font-weight: 100; padding: 0 20px 0 0; text-align: right; vertical-align: top; width: 150px; }
 #membership-wrapper .user-taxonomy-wrapper td { padding: 0; }
