Updated User Profile css and added User Tags heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@
     width: 300px;
     overflow: hidden;
 }
+.user-taxonomies-page .form-table .tagchecklist {
+    width: auto;
+}
 
 td.ajaxtag {
     position: relative;
