Commit  all changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,10 @@ ul.user-taxonomy-wrapper .tagchecklist span a {
     margin: -1px 0 0 0;
 }
 .profile-php .user-taxonomy-wrapper .tagchecklist span a {
-    margin: -1px 0 0 5px;
+    margin: 0 auto;
+    font-size: 9px;
+    display: block;
+    position: relative;
 }
 
 
