--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -9,18 +9,22 @@
     /*padding: 0 10px;*/
 }
 
-.user-taxonomies-page .form-table th {
-    padding-left: 4px;
-    width: 85px;
+.user-taxonomies-page {
+    .form-table th {
+        padding-left: 4px;
+        width: 85px;
+    }
 }
 
-.user-taxonomy-wrapper .tagchecklist {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 600px;
-    margin-left: 0;
-    padding: 10px 10px 10px 0;
-    overflow: hidden;
+.user-taxonomy-wrapper {
+    .tagchecklist {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 600px;
+        margin-left: 0;
+        padding: 10px 10px 10px 0;
+        overflow: hidden;
+    }
 }
 
 td.ajaxtag {
@@ -203,6 +207,7 @@ ul.user-profile-taxonomy .ntdelbutton {
 
 .ut-term-users-list li {
     display: inline-block;
+    list-style: none;
     margin: 10px;
     padding: 3px;
 }
