--- a/_src/scss/main.scss
+++ b/_src/scss/main.scss
@@ -3,239 +3,111 @@
     Author     : Umesh Kumar <umeshsingla05@gmail.com>
 */
 .user-taxonomy-wrapper {
-    background: none;
-    /*box-shadow: 0 0 2px 1px rgba(0, 0,0,0.2);*/
-    border-radius: 4px;
-    /*padding: 0 10px;*/
+	background: none;
+	/*box-shadow: 0 0 2px 1px rgba(0, 0,0,0.2);*/
+	border-radius: 4px;
+	/*padding: 0 10px;*/
 }
 
 .user-taxonomies-page {
-    .form-table th {
-        padding-left: 4px;
-        width: 85px;
-    }
-}
-
-.user-taxonomy-wrapper {
-    .tagchecklist {
-        display: flex;
-        flex-wrap: wrap;
-        max-width: 600px;
-        margin-left: 0;
-        padding: 10px 10px 10px 0;
-        overflow: hidden;
-    }
-}
-
-td.ajaxtag {
-    position: relative;
+	.form-table th {
+		padding-left: 4px;
+		width: 85px;
+	}
 }
 
 .howto {
-    clear: left;
+	clear: left;
 }
 
 .float-left {
-    float: left;
-}
-
-.tag-suggestion {
-    background: white;
-    border: 1px solid black;
-    clear: left;
-    cursor: pointer;
-    float: left;
-    list-style: none;
-    margin: 0;
-    padding: 4px;
-    position: absolute;
-    top: 40px;
-    z-index: 10;
-}
-
-.term-link {
-    float: left;
-    line-height: 1.7;
-    margin: 0;
-    padding: 0 8px;
+	float: left;
 }
 
 #message.updated {
-    margin-left: 0;
-    padding: 6px;
+	margin-left: 0;
+	padding: 6px;
 }
 
 #editusertaxonomy .submit {
-    float: left;
+	float: left;
 }
 
 .ut-back-link {
-    text-decoration: none;
-    margin-right: 25px;
-    float: right;
+	text-decoration: none;
+	margin-right: 25px;
+	float: right;
 }
 
-.user-taxonomy-wrapper th {
-    background: none !important;
-    border: 0 !important;
+.user-taxonomy-wrapper {
+	th {
+		background: none !important;
+		border: 0 !important;
+	}
+
+	td,
+	.odd td {
+		border: none !important;
+		background: none !important;
+	}
+
+	#membership-wrapper & {
+
+		th {
+			color: inherit;
+			font-weight: 100;
+			padding: 0 20px 0 0;
+			text-align: right;
+			vertical-align: top;
+			width: 150px;
+		}
+
+		td {
+			padding: 0;
+		}
+	}
 }
 
-.user-taxonomy-wrapper td, .user-taxonomy-wrapper .odd td {
-    border: none !important;
-    background: none !important;
+.user-profile-taxonomy {
+
+    li {
+        list-style: none;
+    }
+
+    .taxonomy-wrapper {
+        display: inline-block;
+        position: relative;
+    }
 }
 
-.tag-hldr {
-    align-items: center;
-    background: #444;
-    display: flex;
-    margin: 2px 3px;
-    padding: 5px;
-}
-
-.tag-hldr:hover {
-    background: #14b694;
-}
-
-.tag-hldr span {
-    align-items: center;
-    background: rgb(155, 140, 140);
-    border-radius: 50%;
-    display: flex;
-    margin-right: 5px;
-    max-width: 19px;
-    position: relative;
-    text-align: center;
-}
-
-.tag-hldr span:hover {
-    background: rgb(180, 0, 0);
-    cursor: pointer;
-}
-
-.tag-hldr a {
-    color: white;
-    font-size: 1.3em;
-    text-decoration: none;
-}
-
-.tag-hldr a:hover {
-    color: rgb(245, 245, 245);
-    text-decoration: none;
-}
-
-a.ntdelbutton {
-    font-size: 14px;
-    line-height: 16px;
-    text-shadow: none;
-    vertical-align: top;
-}
-
-.user-taxonomy-wrapper .tagchecklist span {
-    line-height: inherit;
-}
-
-.user-taxonomy-wrapper .tagchecklist span a {
-    font-size: 18px;
-    margin: auto;
-    position: relative;
-}
-ul.user-taxonomy-wrapper .tagchecklist span a {
-    margin: -1px 0 0 0;
-}
-.profile-php .user-taxonomy-wrapper .tagchecklist span a {
-    font-size: 1em;
-    font-weight: bold;
-    height: auto;
-    line-height: 1.6;
-    margin: 0 auto;
-    position: relative;
-    text-shadow: 1px 1px #08090917;
-}
-
-
-.user-taxonomy-wrapper .tagchecklist span a:before {
-    content: none;
-}
-
-#membership-wrapper .user-taxonomy-wrapper th {
-    color: inherit;
-    font-weight: 100;
-    padding: 0 20px 0 0;
-    text-align: right;
-    vertical-align: top;
-    width: 150px;
-}
-
-#membership-wrapper .user-taxonomy-wrapper td {
-    padding: 0;
-}
-
-ul.user-profile-taxonomy {
-    margin-bottom: 10px;
-    margin-left: 0;
-}
-
-ul.user-profile-taxonomy .tag-hldr span {
-    margin: 0;
-}
-
-ul.user-profile-taxonomy label {
-    display: inline-block;
-    vertical-align: top;
-    width: 100px;
-}
-
-ul.user-profile-taxonomy > li {
-    overflow: hidden;
-    list-style: none;
-    margin: 20px 0;
-}
-
-ul.user-profile-taxonomy > li:last-child {
-    margin-bottom: 0;
-}
-
-ul.user-profile-taxonomy .taxonomy-wrapper {
-    display: inline-block;
-    position: relative;
-}
-
-ul.user-profile-taxonomy .ntdelbutton {
-    line-height: 13px !important;
-}
-
+/**
+Template Styling
+ */
 .ut-term-users-list li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px;
-    padding: 3px;
-}
+	display: inline-block;
+	list-style: none;
+	margin: 10px;
+	padding: 3px;
 
-.ut-term-users-list li img {
-    display: block;
-    margin: 0 auto;
-}
+    img {
+        display: block;
+        margin: 0 auto;
+    }
 
-.ut-term-users-list li h2 {
-    margin: 10px;
+    h2 {
+        margin: 10px;
+    }
 }
 
 .ut-user-title {
-    font-size: 14px;
-}
-
-.tagcloud-container {
-    background: white;
-    padding: 10px;
-    width: 400px;
+	font-size: 14px;
 }
 
 .ut-taxonomy-filter {
-    display:inline-block;
-    float:none;
+	display: inline-block;
+	float: none;
 }
 
 .ut-reset-filters {
-    margin-left: 10px;
+	margin-left: 10px;
 }
